examples/tests/valid/subdir/subfile.w
bring math;

class Q {
  extern "./util.js" static inflight greet(name: str): str;
}
